BornAgain-1.17.99, work in progress
  > API changes:
    1) Shorter names for FootprintSquare, FootprintGauss
    2) FormFactorHollowSphere (moved from soft to hard particles, and renamed)
  > Changes in build configuration:
    1) Python2 no longer supported
    2) OpenGL can no longer be deselected
    3) Eigen3 removed from ThirdParty; it is now a regular external dependence
  > Internal refactoring:
    1) Unit tests now under CTest control, no longer enforced during compilation
    2) Uniform handling of assertions

BornAgain-1.17.0, released 2020.06.16
  > API changes:
    1) Add Nevot-Croce roughness model.
    2) Add form factors for CantellatedCube and various ripples.
    3) GUI: project compatibility with previous versions is partly broken.
  > Summary:
    1) Speed-up computations for samples with large number of layers
    2) Add Nevot-Croce roughness model; support switching between models
    3) Scripting support for polarized reflectometry
    4) Update physical constants to 2020 CODATA recommended values
    5) FormFactors: add CantellatedCube
    6) FormFactors: speedup FormFactorFullSpheroid
    7) FormFactors: revise and extend ripple form factor family
    8) Fix HighDPI issues in GUI on various platforms
    9) Various bug fixes

  * Bug #2424: GUI crash by unexpected user behavior
  * Bug #2441: Imaginary SLD
  * Bug #2442: Roughness on first semi-infinite layer
  * Bug #2461: GUI: crash in 3D view with lock function
  * Feature #2428: Add Nevot-Croce roughness model
  * Feature #2430: Try switch bindings to swig v4.0.1
  * Feature #2438: Website: rename "python scripts" and "tutorial examples" menu entries.
  * Feature #2443: Create document describing the release procedure.
  * Feature #2445: GUI: fix fancy toolbars under Linux
  * Feature #2446: GUI: fix HighDPI issues under Windows.
  * Feature #2447: Update eigen3 submodule URL
  * Feature #2448: Switch Appveyor Windows build to MSVC 2019
  * Feature #2449: Enable Travis MacOS build